Small updates to the PTG compiler part.
Signed-off-by: George Bosilca <bosilca@icl.utk.edu>

--- a/writejdf.wiki
+++ b/writejdf.wiki
@@ -1,6 +1,6 @@
 == How to Write a PaRSEC-Enabled Operation by editing the JDF file directly ==
 
-See [[understanding|Understanding the Compilation process]] to get a big picture. 
+See [[understanding|Understanding the Compilation process]] to get a big picture.
 
 === Input Format ===
 
@@ -21,7 +21,7 @@ INFO         [type = "int*"]
 /**************************************************
  *                      POTRF                     *
  **************************************************/
-POTRF(k) 
+POTRF(k)
 
 // Execution space
 k = 0..A->mt-1
@@ -118,12 +118,12 @@ RW    C <- (k == 0) ? A(m, n) : C GEMM(k-1, m, n)
 
 BODY
     if( uplo == PlasmaLower ) {
-           CORE_zgemm( 
+           CORE_zgemm(
                 PlasmaNoTrans, PlasmaTrans, A->mb, A->mb, A->mb,
                 (Dague_Complex64_t)-1.0, B, A->mb, A, A->mb,
                 (Dague_Complex64_t) 1.0, C, A->mb);
    } else {
-           CORE_zgemm( 
+           CORE_zgemm(
                 PlasmaTrans, PlasmaNoTrans, A->mb, A->mb, A->mb,
                 (Dague_Complex64_t)-1.0, B, A->mb, A, A->mb,
                 (Dague_Complex64_t) 1.0, C, A->mb);
@@ -142,7 +142,7 @@ extern "C" %{
 #include "data_dist/matrix/matrix.h"
 %}
 }}}
-In this preamble, we add the includes that define the protoype of the functions that each task will call, when executed. We also include the parsec.h and the generic include file for tiled matrix distributions. Functions definitions, or global variables, can be added here, but caution should be used, since this code will be dumped as is at the beginning of the generated C file.
+In this preamble, we add the includes that define the prototype of the functions that each task will call, when executed. We also include the parsec.h and the generic include file for tiled matrix distributions. Functions definitions, or global variables, can be added here, but caution should be used, since this code will be dumped as is at the beginning of the generated C file.
 
 Then, we define a set of objects that are used in the tasks below. These objects are recognized by the JDF translator, and thus they must follow a non-C syntax:
 {{{
@@ -154,7 +154,7 @@ Here, we define for example the general type of the object {{{A}}} as a C struct
 
 A Cholesky factorization contains four kernels, called **POTRF, HERK, TRSM, and GEMM**. For each of these kernels, the JDF holds a parameterized task. Let us look closely at the first one, **POTRF**:
 {{{
-POTRF(k) 
+POTRF(k)
 
 // Execution space
 k = 0..A->mt-1
@@ -175,16 +175,16 @@ The task is defined with a single parameter, {{{k}}}. This parameter must have a
 
 Then, the task defines its data affinity: task **POTRF(k)** will run on the node that holds the part of the matrix pointed by {{{A(k, k)}}}. Each task must define a single data as its affinity. The entry is a reference on a {{{parsec_ddesc_t}}} object, with the appropriate number of parameters. See more on [[datadistribution|Write a program that uses a PaRSEC-Enabled Operation]] about data distributions.
 
-After the data affinity, comes the data flow of the task. 
+After the data affinity, comes the data flow of the task.
 {{{
 // Parameters
 RW T <- (k == 0) ? A(k, k) : T HERK(k-1, k)
      -> T TRSM(k, k+1..A->mt-1)
      -> A(k, k)
 }}}
-This data flow defines a single data element, {{{T}}}, that flows inside **POTRF(k)** with the first line, and after {{{T}}} has been processed by the task, it flows out of it, towards tasks or memory, as specified by the two last lines. Because the data element is accessed in read and write by the task, it is specified so using the keyword {{{RW}}} in front of it. Each data element that is so defined must have a single input flow (although multiple input flows are acceptable syntaxically, they must be mutually exclusive, to ensure the data element is defined by a single task). The first line reads as "{{{T}}} comes from the memory if {{{k}}} is equal to {{{0}}}, and then it is accessed directly from memory, as provided by {{{A(k, k)}}}; otherwise, {{{T}}} comes from the data element also called {{{T}}} in the task **HERK(k-1, k)**". The second line reads as "{{{T}}} flows to the data element also called {{{T}}} in the task **TRSM(k, k+1)**, and to the data element also called {{{T}}} in the task **TRSM(k, k+2)**, and so on until the data element called {{{T}}} in the task **TRSM(k, A->mt-1)**". If this set reduces to the empty set, {{{T}}} will not flow out of this task. The last line reads as "one this data element has been processed by this task, no other task of the same operation will modify its value, and it should be copied back into memory, at the location {{{A(k, k)}}}". 
+This data flow defines a single data element, {{{T}}}, that flows inside **POTRF(k)** with the first line, and after {{{T}}} has been processed by the task, it flows out of it, towards tasks or memory, as specified by the two last lines. Because the data element is accessed in read and write by the task, it is specified so using the keyword {{{RW}}} in front of it. Each data element that is so defined must have a single input flow (although multiple input flows are acceptable syntactically, they must be mutually exclusive, to ensure the data element is defined by a single task). The first line reads as "{{{T}}} comes from the memory if {{{k}}} is equal to {{{0}}}, and then it is accessed directly from memory, as provided by {{{A(k, k)}}}; otherwise, {{{T}}} comes from the data element also called {{{T}}} in the task **HERK(k-1, k)**". The second line reads as "{{{T}}} flows to the data element also called {{{T}}} in the task **TRSM(k, k+1)**, and to the data element also called {{{T}}} in the task **TRSM(k, k+2)**, and so on until the data element called {{{T}}} in the task **TRSM(k, A->mt-1)**". If this set reduces to the empty set, {{{T}}} will not flow out of this task. The last line reads as "one this data element has been processed by this task, no other task of the same operation will modify its value, and it should be copied back into memory, at the location {{{A(k, k)}}}".
 
-The PaRSEC runtime engine does not guarantee that {{{T}}} will always be located in {{{A(k, k)}}} during the whole execution: it can be copied in a temporary memory, for communications or optmiziation purposes. Nor does it guarantees that {{{T}}} will not point to {{{A(k, k)}}} if this is at all possible. That is the reason why the developper should always specify when the data should be safely written back in memory, and never access the memory directly, but only through the data flow.
+The PaRSEC runtime engine does not guarantee that {{{T}}} will always be located in {{{A(k, k)}}} during the whole execution: it can be copied in a temporary memory, for communications or optimization purposes. Nor does it guarantees that {{{T}}} will not point to {{{A(k, k)}}} if this is at all possible. That is the reason why the developer should always specify when the data should be safely written back in memory, and never access the memory directly, but only through the data flow.
 
 Data flows in the JDF must be symmetric: if **POTRF** writes that it receives data from **HERK**, **HERK** must write that it sends data to **POTRF**. The inversion of parameters must match.
 
@@ -204,21 +204,24 @@ The JDF translator will create a piece of code that defines {{{T}}} as a functio
 
 === Calling the JDF Translator ===
 
-When a JDF is completely written, the PaRSEC-Enabled Operation Developper needs to call the JDF translator to get a c-file and a h-file. 
+A JDF file can, and must, be converted into a source, aka. compilable, version using the PaRSEC source-to-source precompiler, {{{parsec_ptgpp}}}. This translator, **parsec_ptgpp**, is located in the PaRSEC source parsec/interfaces/ptg/ptg-compiler sub-directory, and is installed in the bin directory upon successful compilation.
 
-This translator is called **parsecpp** and is located in the tools/parsec-compiler/ sub-directory. It is always generated with the dplasma code.
+The outcome of the precompiler is to generate a ***.c** source file, and the associated **.h*** header file that correspond to the JDF dataflow, files containing the concise representation of the DAG, and the events that triggers the progress of the entire algorithm.
 
-It takes the following options:
+**parsec_ptgpp** takes the following options:
 *  --debug|-d         Enable bison debug output
 *  --input|-i         Input File (JDF) (default '-')
 *  --output|-o        Set the BASE name for .c, .h and function name (no default).
-                      Changing this value has precendence over the defaults of
+                      Changing this value has precedence over the defaults of
                       --output-c, --output-h, and --function-name
 *  --output-c|-C      Set the name of the .c output file (default 'a.c' or BASE.c)
 *  --output-h|-H      Set the name of the .h output file (default 'a.h' or BASE.h)
 *  --function-name|-f Set the unique identifier of the generated function
                       The generated function will be called PaRSEC_<ID>_new
                       (default a)
+* --dep-management|-M Select how dependencies tracking is managed. Possible choices
+                      are 'index-array' or 'dynamic-hash-table'
+                      (default 'dynamic-hash-table')
 *  --noline           Do not dump the JDF line number in the .c output file
 *  --line             Force dumping the JDF line number in the .c output file
                       Default: --line
@@ -233,9 +236,8 @@ And some warning-related options (by default, all warnings are printed). You can
                       input flows
 *  --Wremoteref       Do NOT print warnings for potential remote memory references
 
-All warnings should be carefully investigated by the PaRSEC-Enabled Operation developper who wants to get a working JDF, because most of them are fatal to a correct behavior in a distributed runtime.
+All warnings should be carefully investigated by the PaRSEC-Enabled Operation developer who wants to get a working JDF, because most of them are fatal to a correct behavior in a distributed runtime.
 
 === Now What? ===
 
 Your PaRSEC-Enabled operation is ready! To test it, you should [[datadistribution|Write a program that uses a PaRSEC-Enabled Operation]].
-
