--- a/Home.wiki
+++ b/Home.wiki
@@ -12,7 +12,7 @@ Two moderated mailing-lists are available, one for the users and the other for t
 ** [[compilejdf|How to write a PaRSEC enabled operation by using the PaRSEC compiler]]
 ** [[writejdf|How to write a PaRSEC enabled operation by editing the JDF file directly]]
 ** [[datadistribution|How to write a program that uses a PaRSEC enabled operation]] (a.k.a. "what is this data distribution thing?")
-** [[Profiling%20PaRSEC-based%20applications|How to profile PaRSEC applications]]
+** [[Profiling-PaRSEC-based-applications|How to profile PaRSEC applications]]
 *** [[Profiling%20PaRSEC%20Applications%20with%20PAPI|Profiling PaRSEC Applications with PAPI]]
 ** [[PINS|How to write a PINS Module to instrument PaRSEC applications]]
 ** [[PaRSEC%20Trace%20Tables%20via%20Python|How to use the Python PaRSEC Trace Tables interface]]
