--- a/Home.wiki
+++ b/Home.wiki
@@ -4,7 +4,8 @@ Two moderated mailing-lists are available, one for the users and the other for t
 
 == How to Compile and Run DPLASMA ==
 
-* [[compileandrun|How to compile and run dplasma]]
+* [[compileandrun|How to compile and run dplasma]] 
+* [[compileandrun-v1.x|obsolete version (v1.x)]]
 
 == Understanding the compilation and runtime process of PaRSEC ==
 
