--- a/Home.wiki
+++ b/Home.wiki
@@ -16,7 +16,7 @@ Two moderated mailing-lists are available, one for the users and the other for t
 ** [[Profiling PaRSEC-based applications|How to profile PaRSEC applications]]
 *** [[Profiling PaRSEC Applications with PAPI|Profiling PaRSEC Applications with PAPI]]
 ** [[PINS|How to write a PINS Module to instrument PaRSEC applications]]
-** [[PaRSEC Trace Tables via Pythonn|How to use the Python PaRSEC Trace Tables interface]]
+** [[PaRSEC Trace Tables via Python|How to use the Python PaRSEC Trace Tables interface]]
 ** [[PaRSEC on Intel Xeon Phi Native Mode.wiki|How to run PaRSEC in Intel Xeon Phi (native mode)]]
 ** [[VisualizationTools.wiki|Visualization: Stream algorithmic properties out of the PaRSEC runtime]]
 ** [[Using PaRSEC binding to bind computation and communication cores.md|Binding with MPI and PaRSEC]]
