--- a/PaRSEC on Intel Xeon Phi Native Mode.wiki
+++ b/PaRSEC on Intel Xeon Phi Native Mode.wiki
@@ -1,4 +1,4 @@
-Running PaRSEC on Intel Xeon Phi is almost the same as [[https://bitbucket.org/bosilca/dplasma/wiki/compileandrun |running on other platforms]]. But there are some differences in the following sections:
+Running PaRSEC on Intel Xeon Phi is almost the same as [[compileandrun |running on other platforms]]. But there are some differences in the following sections:
 
 == Install required softwares ==
 
